feat(server): move storage to API v3
