# server/lib/v3/handlers.js
@@ -3,6 +3,7 @@ import cryptos from '../cryptos.js';
 import fee from '../fee.js';
 import csFee from '../csFee.js';
 import mecto from '../mecto.js';
+import storage from '../storage.js';
 
 export async function qwe(req, res) {
   return res.status(200).send('ok');
@@ -49,4 +50,14 @@ export async function saveMecto(req, res) {
 export async function removeMecto(req, res) {
   await mecto.remove(req.device);
   res.status(200).send({ success: true });
+}
+
+export async function getStorage(req, res) {
+  const data = await storage.getStorage(req.device, req.params.storageName);
+  res.status(200).send({ data });
+}
+
+export async function setStorage(req, res) {
+  const data = await storage.setStorage(req.device, req.params.storageName, req.body.data);
+  res.status(200).send({ data });
 }
